# web_thai_nlp

./: Cargo.toml  Dockerfile  README.md  build.rs  build_docker.sh  push_docker_hub.sh  run_docker.sh
src/: apis.rs  main.rs  thai_bath_text.rs  thai_encoding.rs  thai_text_number_utility.rs
static/: index.html
tests/: post_loc.txt  post_sort.txt  test_bahttext.sh  test_thaisorting.sh
