[package]
name = "web_thai_nlp_x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
actix-files = "0.6"
actix-web-opentelemetry = "0.12.0"

env_logger = "0.9"
logs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"]}
opentelemetry-application-insights = { version = "0.20.0" , features = ["reqwest-client"]}
reqwest = "0.11.10"
